--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,4 +1,3 @@
-# Dockerfile.base
 FROM docker:dind
 
 # Instalar git y otras herramientas necesarias
@@ -7,9 +6,8 @@ RUN apk add --no-cache git bash
 # Establecer el directorio de trabajo
 WORKDIR /benchmarks
 
+# Clonar el repositorio con los benchmarks
+RUN git clone https://github.com/KidmanC/Dockerfile .
 
 # Script de entrada
-CMD ["sh", "-c", "dockerd & sleep 5 && \
-    git clone https://github.com/KidmanC/Dockerfile . && \
-    chmod +x run-benchmark.sh && \
-    ./run-benchmark.sh"]
+CMD ["sh", "-c", "dockerd & sleep 5 && cd Dockerfile && chmod +x run-benchmark.sh && ./run-benchmark.sh"]
